changed title of page

--- a/PuzzleSlicer.html
+++ b/PuzzleSlicer.html
@@ -13,7 +13,7 @@
 	<meta name="keywords" lang="EN" content="Pavithren, Pakianathan, Keng Hoe, Leong,  Tan Kuan Chuen Alvin,
 	SUTD,Singapur,Singapore,University,Technology,Design,Computational,Fabrication,UCLA">
 
-	<title>Active Rod Structures | SUTD Singapore University of Technology and Design</title>
+	<title>Puzzle Slicer for Kids | Computational Fabrication 2017 | SUTD Singapore University of Technology and Design</title>
 
 	<link href="./PuzzleSlicer/sutd.css" rel="stylesheet" type="text/css">
 
